# win32tools

./: CMakeLists.txt  LICENSE  README.md
include/: Main.hpp
include/Network/: IocpTcpServer.hpp  NamedPipe.hpp  NetworkSocket.hpp  Packet.hpp  Socket.hpp  port32.h
include/Tools/: DriveInfo.hpp  HaxHelper.hpp  Inject.hpp  ProcessID.hpp  Tools.hpp  winio.h
src/: Main.cpp
src/Network/: IocpTcpServer.cpp  NamedPipe.cpp  NetworkSocket.cpp  Packet.cpp  Socket.cpp
src/Tools/: DriveInfo.cpp  HaxHelper.cpp  Inject.cpp  ProcessID.cpp  Tools.cpp
